--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "noam-lemma-javascript",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "homepage": "https://github.com/noam-io/lemma-javascript",
   "authors": [
     "dethtron5000 <polson@ideo.com>",
@@ -14,7 +14,8 @@
   ],
   "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
   "keywords": [
-    "noam"
+    "noam",
+    "internet of things"
   ],
   "license": "BSD-3-Clause",
   "ignore": [
@@ -23,5 +24,14 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "main":"dist/lemma.js",
+  "devDependencies": {
+    "jasmine": "~1.3.1",
+    "jquery": "~2.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noam-io/lemma-javascript.git"
+  }
 }
