--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
   "name": "noam-lemma-javascript",
-  "version": "0.0.1",
+  "version": "0.2.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/ideo/noam-lemma-javascript.git"
   },
+  "homepage": "https://github.com/noam-io/lemma-javascript",
+  "author":"dethtron5000 <polson@ideo.com>",
+  "contributors": [
+    "dethtron5000 <polson@ideo.com>",
+    "Andrew Kelly <akelly@8thlight.com>",
+    "Colin Jones <trptcolin@gmail.com>",
+    "David Brody <dbrody@ideo.com>",
+    "Doug Bradbury <doug@bradbury.cc>",
+    "Joe Banks <jbanks@ideo.com>",
+    "dougbradbury <doug@8thlight.com>",
+    "evan <eshapiro@ideo.com>"
+  ],
+  "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
   "dependencies": {
     "ws": "0.4.x"
   },
+  "license": "BSD-3-Clause",
   "devDependencies": {
-    "jshint": "2.x"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.9.2",
+    "jshint": "2.x",
+    "load-grunt-tasks": "^3.2.0"
   },
   "jshintConfig": {
-    "boss":      true,
-    "node":      true,
+    "boss": true,
+    "node": true,
     "smarttabs": true,
-    "undef":     true,
-    "unused":    true,
-    "onecase":   true,
+    "undef": true,
+    "unused": true,
+    "onecase": true,
     "lastsemic": true,
-    "newcap":    false,
-    "maxlen":    100,
-    "indent":    2
+    "newcap": false,
+    "maxlen": 100,
+    "indent": 2
   },
   "engines": {
     "node": "0.11.x",
