--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "git://github.com/noam-io/lemma-javascript"
   },
   "homepage": "https://github.com/noam-io/lemma-javascript",
-  "author":"dethtron5000 <polson@ideo.com>",
+  "author": "dethtron5000 <polson@ideo.com>",
   "contributors": [
     "dethtron5000 <polson@ideo.com>",
     "Andrew Kelly <akelly@8thlight.com>",
@@ -21,6 +21,9 @@
     "noam",
     "internet of things"
   ],
+  "scripts": {
+    "test": "grunt test"
+  },
   "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
   "dependencies": {
     "ws": "0.4.x"
@@ -30,7 +33,9 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-jscs": "^2.1.0",
     "jshint": "2.x",
     "load-grunt-tasks": "^3.2.0"
   },
