--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "internet of things"
   ],
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "preversion": "npm test",
+    "build": "grunt"
   },
   "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
   "dependencies": {
