--- a/bower.json
+++ b/bower.json
@@ -3,14 +3,7 @@
   "version": "0.3.4",
   "homepage": "https://github.com/noam-io/lemma-javascript",
   "authors": [
-    "dethtron5000 <polson@ideo.com>",
-    "Andrew Kelly <akelly@8thlight.com>",
-    "Colin Jones <trptcolin@gmail.com>",
-    "David Brody <dbrody@ideo.com>",
-    "Doug Bradbury <doug@bradbury.cc>",
-    "Joe Banks <jbanks@ideo.com>",
-    "dougbradbury <doug@8thlight.com>",
-    "evan <eshapiro@ideo.com>"
+    "dethtron5000 <polson@ideo.com>"
   ],
   "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
   "keywords": [
@@ -25,7 +18,7 @@
     "test",
     "tests"
   ],
-  "main":"dist/lemma.js",
+  "main": "dist/lemma.js",
   "devDependencies": {
     "jasmine": "~1.3.1",
     "jquery": "~2.1.4"
