--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dougbradbury <doug@8thlight.com>",
     "evan <eshapiro@ideo.com>"
   ],
+  "main": "src/Lemma.js",
   "keywords": [
     "noam",
     "internet of things"
@@ -24,6 +25,7 @@
   "scripts": {
     "test": "grunt test",
     "preversion": "npm test",
+    "version": "grunt sync && git add -A dist && git add bower.json",
     "build": "grunt"
   },
   "description": "This library is used to connect javascript applications to Ideo's Noam Server. It uses web sockets, which can connect up through firewalls and translation layers.",
@@ -38,6 +40,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-jscs": "^2.1.0",
+    "grunt-npm2bower-sync": "^0.9.1",
     "jshint": "2.x",
     "load-grunt-tasks": "^3.2.0"
   },
