--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-jscs": "^2.1.0",
     "grunt-npm2bower-sync": "^0.9.1",
+    "grunt-release": "^0.13.0",
     "jshint": "2.x",
     "load-grunt-tasks": "^3.2.0"
   },
